# AreCELearnedYet

./: .env  .gitignore  .pylintrc  Justfile  README.md  hyper-params.md  pyproject.toml
dynamic-exp/: best_hp.csv  dynamic_exp.sh  parse_log_exmaple.py
lecarb/: __init__.py  __main__.py  constants.py  dtypes.py
lecarb/dataset/: dataset.py  gen_dataset.py  manipulate_dataset.py
lecarb/estimator/: bayesnet.py  estimator.py  feedback_kde.py  mhist.py  mysql.py  postgres.py  sample.py  utils.py
lecarb/estimator/deepdb/: README.md  deepdb.py
lecarb/estimator/deepdb/aqp_spn/: aqp_leaves.py  aqp_spn.py
lecarb/estimator/deepdb/data_preparation/: join_data_preparation.py  prepare_single_tables.py
lecarb/estimator/deepdb/ensemble_compilation/: probabilistic_query.py  spn_ensemble.py
lecarb/estimator/lw/: README.md  common.py  lw_nn.py  lw_tree.py  model.py
lecarb/estimator/mscn/: README.md  model.py  mscn.py
lecarb/estimator/naru/: README.md  made.py  naru.py
lecarb/workload/: dump_quicksel.py  gen_label.py  gen_workload.py  generator.py  merge_workload.py  workload.py
